--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1089,7 +1089,7 @@ a {
 }
 .cid-sFzxmVl7J6 .mbr-text,
 .cid-sFzxmVl7J6 .mbr-section-btn {
-  color: #353535;
+  color: #232323;
   text-align: justify;
 }
 .cid-sFzyUE9AaP {
@@ -1194,13 +1194,13 @@ a {
 }
 .cid-sFzFvgBfc0 .mbr-text,
 .cid-sFzFvgBfc0 .mbr-section-btn {
-  text-align: left;
+  text-align: center;
 }
 .cid-sFzFvgBfc0 .item-title {
-  text-align: left;
+  text-align: center;
 }
 .cid-sFzFvgBfc0 .item-subtitle {
-  text-align: left;
+  text-align: center;
   color: #e43f3f;
 }
 .cid-sFzErVWEaH {
